<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ldnhat.demosearchmap.viewmodel.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cons_title"
            >
            <ImageView
                android:id="@+id/closeSearch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="15dp"
                android:onClick="@{() -> viewModel.onBackClick()}"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/closeSearch"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:textSize="20sp"
                android:text="@string/search_title"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/cons_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#ffcccccc"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_province"
            android:id="@+id/edProvince"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/line"
            style="@style/CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:textSize="16sp"
                android:cursorVisible="false"
                android:clickable="false"
                textCountryDetail="@{viewModel.provinceCountryDetail}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edDistrict"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_district"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/edProvince"
            style="@style/CustomTextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:textSize="16sp"
                android:cursorVisible="false"
                android:clickable="false"
                textCountryDetail="@{viewModel.districtCountryDetail}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ed_sub_district"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/edDistrict"
            style="@style/CustomTextInputLayout"
            android:id="@+id/edSubDistrict"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textSubDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:textSize="16sp"
                android:cursorVisible="false"
                android:clickable="false"
                textCountryDetail="@{viewModel.subDistrictCountryDetail}"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:textColor="#FFF"
            android:text="@string/apply"
            stateButton="@{viewModel.stateButton}"
            android:background="@drawable/custom_button_search"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>